# dbFatCrawl

./: .gitignore  README.md  pyproject.toml
_bmad-output/implementation-artifacts/: spec-douban-fatworm-analysis-site.md
docs/: api-contracts.md  architecture.md  component-inventory.md  course_design_report.md  data-models.md  development-guide.md  index.md  project-overview.md  project-scan-report.json  report_20260622_184855.html  source-tree-analysis.md
src/douban_fatworm/: __init__.py  analysis.py  config.py  crawler.py  database.py  routes.py
src/douban_fatworm/static/css/: app.css
src/douban_fatworm/templates/: analysis.html  base.html  compare.html  crawl.html  detail.html  form.html  index.html
tests/: test_analysis.py  test_crawler.py  test_database.py  test_routes.py
