[project]
name = "douban-fatworm"
version = "0.1.0"
description = "Douban movie/book crawling and analysis website for Python coursework."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "flask>=3.0.3",
    "matplotlib>=3.9.2",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "wordcloud>=1.9.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
